// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toast API 1`] = `
.c4 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c1 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.dUUMVe > *:nth-child(2) .c3 {
  margin-top: 5px;
}

.pYtWd > .c3 {
  margin-top: 5px;
}

.sQyKx > .c3 {
  margin-top: 5px;
}

.c0 {
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

<div
  className="c0 c1"
  kind="primary"
>
  <p
    className="c2 c3 c4"
    kind="primary"
  >
    Success! You have delete the item.
  </p>
</div>
`;

exports[`Storyshots Toast With kind props 1`] = `
.c5 {
  margin: 0;
  font-size: 1rem;
  color: currentColor;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
}

.dUUMVe > *:nth-child(2) .c4 {
  margin-top: 5px;
}

.pYtWd > .c4 {
  margin-top: 5px;
}

.sQyKx > .c4 {
  margin-top: 5px;
}

.c6 {
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c1 {
  border: 1px solid #999A94;
  background-color: rgba(255,255,255,0.9);
}

.c8 {
  border: 1px solid #69BE28;
  background-color: rgba(255,255,255,0.9);
}

.c10 {
  border: 1px solid #F5364E;
  background-color: rgba(255,255,255,0.9);
}

.c12 {
  border: 1px solid #F39A1E;
  background-color: rgba(255,255,255,0.9);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #999A94;
  background-color: rgba(250,250,250,0.1);
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #69BE28;
  background-color: rgba(105,190,40,0.1);
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F5364E;
  background-color: rgba(245,54,78,0.1);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F39A1E;
  background-color: rgba(243,154,30,0.1);
}

.c0 > * {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    kind="default"
  >
    <div
      className="c3 c4 c5"
      kind="default"
    >
      default
       - You have delete the item.
    </div>
  </div>
  <div
    className="c6 c2"
    kind="primary"
  >
    <div
      className="c7 c4 c5"
      kind="primary"
    >
      primary
       - You have delete the item.
    </div>
  </div>
  <div
    className="c8 c2"
    kind="success"
  >
    <div
      className="c9 c4 c5"
      kind="success"
    >
      success
       - You have delete the item.
    </div>
  </div>
  <div
    className="c10 c2"
    kind="error"
  >
    <div
      className="c11 c4 c5"
      kind="error"
    >
      error
       - You have delete the item.
    </div>
  </div>
  <div
    className="c12 c2"
    kind="warning"
  >
    <div
      className="c13 c4 c5"
      kind="warning"
    >
      warning
       - You have delete the item.
    </div>
  </div>
</div>
`;
